# rubikcube

./: CMakeLists.txt  README.md  ScrambleGen.cpp  ScrambleGen.h  main.cpp  resources.qrc  rubikcube.pro
generator/: CMakeLists.txt  ScrambleGen.cpp  ScrambleGen.h
recources/txt/: help.txt  welcome.txt
rubikcubetwister/: cube.cpp  cube.h  direction.cpp  direction.h  dontreadme.txt  main.cpp  rubikcubetwister.pro  utils.cpp  utils.h  utils_implementation.h
solver/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
twister/: CMakeLists.txt  cube.cpp  cube.h  direction.cpp  direction.h  dontreadme.txt  main.cpp  mask.cpp  mask.h  utils.cpp  utils.h
